# compas_gmsh

./: .bumpversion.cfg  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  conftest.py  doc_versions.txt  environment-linux.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  tasks.py  test.json  test.off  versions.json
.github/workflows/: build.yml  docs.yml  release.yml
0.2.0/: license.html  objects.inv
0.2.0/.doctrees/: gettingstarted.doctree
0.2.0/api/: compas_gmsh.html  compas_gmsh.interop.html  compas_gmsh.models.html
0.2.0/examples/: plate.html
0.2.1/: api.html  examples.html  genindex.html  gettingstarted.html  index.html  intro.html  license.html  py-modindex.html  search.html
0.2.1/.doctrees/: examples.doctree  index.doctree  intro.doctree  license.doctree
0.2.1/api/: compas_gmsh.html  compas_gmsh.interop.html  compas_gmsh.models.html
0.2.1/examples/: csg.html  plate.html  remeshing.html  triangulation.html
0.2.2/: .buildinfo  examples.html  index.html  py-modindex.html  search.html
0.2.2/.doctrees/: examples.doctree
0.2.2/api/: compas_gmsh.html  compas_gmsh.interop.html  compas_gmsh.models.html
0.2.2/examples/: quads.html
0.2.3/: .buildinfo  examples.html  index.html  license.html  objects.inv  search.html
0.2.3/.doctrees/: api.doctree  examples.doctree
0.2.3/_static/: documentation_options.js
0.2.3/api/: compas_gmsh.html  compas_gmsh.models.html
0.2.3/examples/: multi.html  quads.html
0.3.0/: .buildinfo  api.html  index.html  license.html
0.3.0/.doctrees/: api.doctree  index.doctree
0.3.0/api/: compas_gmsh.interop.html  compas_gmsh.models.html
0.3.0/examples/: fragments2.html  fragments3.html  quads.html  tets.html
0.3.1/: .buildinfo  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html
0.3.1/api/: compas_gmsh.models.html
0.3.1/examples/: csg.html  multi.html  quads.html
0.4.0/: api.html  genindex.html  index.html  license.html  py-modindex.html  search.html  searchindex.js
0.4.0/.doctrees/: api.doctree  environment.pickle  installation.doctree
0.4.0/api/: compas_gmsh.html  compas_gmsh.interop.html
0.4.0/examples/: csg.html  fragments3.html  plate.html  quads.html
0.4.1/: api.html  examples.html  genindex.html  index.html  installation.html
0.4.1/.doctrees/: environment.pickle  examples.doctree  index.doctree
0.4.1/api/: compas_gmsh.models.html  compas_gmsh.options.html
0.4.1/examples/: csg.html  multi.html  plate.html  quads.html  remeshing.html  tets.html
0.4.2/: .buildinfo  acknowledgements.html  api.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  searchindex.js  tutorial.html
0.4.2/.doctrees/: examples.doctree  index.doctree  installation.doctree  tutorial.doctree
0.4.2/_static/: versions.json
0.4.2/api/: compas_gmsh.conversions.html  compas_gmsh.models.html  compas_gmsh.options.html
0.4.2/examples/: plate.html  remeshing.html  tets.html
0.4.3/: acknowledgements.html  api.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  tutorial.html
acknowledgements/: index.html
changelog/: index.html
docs/: api.rst  conf.py  index.md  index.rst  installation.md  installation.rst  license.md  tutorial.rst
docsource/: api.rst
examples/: boolean.py  booleans.py  csg1.py  csg2.py  extrusion_occ.py  index.html  remeshing.py  simple.py  slicing.py  tets.rst  triangulation1.py  triangulation2.py
installation/: index.html
latest/: .buildinfo  acknowledgements.html  api.html  examples.html  genindex.html  gettingstarted.html  index.html  installation.html  intro.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html
license/: index.html
scripts/: test.py
search/: search_index.json
stable/: index.html
tests/: test_dummy.py
tutorial/: index.html
(+141 files in other folders)
