[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

# ============================================================================
# project info
# ============================================================================

[project]
name = "compas_gmsh"
description = "COMPAS wrapper for the PYthon bindings of GMSH"
keywords = ["compas", "fea", "meshing", "gmsh"]
authors = [{ name = "tom van mele", email = "tom.v.mele@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["compas", "gmsh"]

[project.optional-dependencies]
dev = [
    "build",
    "bump-my-version",
    "compas_invocations2",
    "invoke >=0.14",
    "pytest",
    "ruff",
    "twine",
    "wheel",
]
docs = [
    "markdown-callouts >=0.4",
    "markdown-exec >=1.8",
    "mike",
    "mkdocs >=1.6",
    "mkdocs-autorefs >=1.4",
    "mkdocs-coverage >=1.0",
    "mkdocs-git-revision-date-localized-plugin >=1.2",
    "mkdocs-llmstxt >=0.2",
    "mkdocs-material >=9.5",
    "mkdocs-minify-plugin >=0.8",
    "mkdocs-redirects >=1.2",
    "mkdocs-section-index >=0.3",
    "mkdocstrings[python]",
    "pydantic >=2.10",
    "tomli >=2.0; python_version < '3.11'",
]
viz = ["compas_viewer"]

[project.urls]
Homepage = "https://compas-dev.github.io/compas_gmsh"
Repository = "https://github.com/compas-dev/compas_gmsh"

# ============================================================================
# setuptools config
# ============================================================================

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = "compas_gmsh.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]

# ============================================================================
# replace pytest.ini
# ============================================================================

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests", "src/compas_gmsh"]
python_files = ["test_*.py", "*_test.py", "test.py"]
addopts = ["-ra", "--strict-markers", "--doctest-glob=*.rst", "--tb=short"]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE",
    "ALLOW_BYTES",
    "NUMBER",
]

# ============================================================================
# replace bumpversion.cfg
# ============================================================================

[tool.bumpversion]
current_version = "0.4.6"
message = "Bump version to {new_version}"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "src/compas_gmsh/__init__.py"
search = "{current_version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "Unreleased"
replace = "[{new_version}] {now:%Y-%m-%d}"

# ============================================================================
# replace setup.cfg
# ============================================================================

[tool.ruff]
line-length = 179
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I001"]
"tests/*" = ["I001"]
"tasks.py" = ["I001"]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["compas", "compas_gmsh"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 179

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
